// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Middleware Caches token on first authorization 1`] = `
Array [
  "kubeToken_ng-for-auth",
  Object {
    "body": Object {
      "id_token": "test-id-token",
    },
  },
]
`;

exports[`Auth Middleware Retrieves token from cache if present 1`] = `
Array [
  "kubeToken_ng-for-auth",
]
`;
